movie model scaffolding unfinished

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-4e6d9e37-6d03-4ea0-8931-933848b9c31c;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
